--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://rosavandenende.github.io/" 
-title: Rosa van den Ende 
+baseURL: "https://angelitora.github.io/"
+title: Angel Ruiz-Angulo
 paginate: 20
 theme: PaperMod
 
@@ -25,7 +25,7 @@ menu:
         #   weight: 4
 
 params:
-    description: "I am a PhD Candidate in Mathematical and Environmental Economics."
+    description: "I am an oceanographer/biker/baker."
     author: Name
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
@@ -49,10 +49,8 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Rosa van den Ende
-          subtitle: "I am a PhD candidate in Mathematical and Environmental Economics at the Centre d'Économie de la Sorbonne (CES), Université Paris I Panthéon-Sorbonne and the Institute of Mathematical Economics, Universität Bielefeld, 
-          under the supervision of Agnieszka Rusinowska and Manuel Förster. I apply game theory and network theory to construct models that can shape effective climate policy. 
-          I am mostly interested in environmental allocation questions and in how to capture the concept of distributive climate justice in mathematics."
+          title: Angel Ruiz-Angulo
+          subtitle: "associate professor university of Iceland"
           imageUrl: "picture.jpg"
           imageWidth: 160
           imageHeight: 160
