--- a/config.yml
+++ b/config.yml
@@ -97,7 +97,7 @@ params:
         hiddenInList: false
         hiddenInSingle: true
     label:
-      text: "Rosa van den Ende"
+      text: "Angel Ruiz-Angulo"
       icon: favicon.ico
       iconHeight: 18
 
