--- a/config.yml
+++ b/config.yml
@@ -14,8 +14,8 @@ menu:
         - name: Publications
           url: papers/
           weight: 1
-        - name: Talks
-          url: talks/
+        - name: Students
+          url: students/
           weight: 2
         - name: Resume
           url: cv_rosa.pdf
