--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://angelitora.github.io/"
+qqqbaseURL: "https://angelitora.github.io/"
 title: Angel Ruiz-Angulo
 paginate: 20
 theme: PaperMod
