--- a/config.yml
+++ b/config.yml
@@ -11,18 +11,21 @@ taxonomies:
 
 menu:
     main:
+        - name: About me
+          url: aboutme/
+          weight: 1
         - name: Publications
           url: publications/
-          weight: 1
+          weight: 2
         - name: Group
           url: students/
-          weight: 2
+          weight: 3
         - name: News
           url: news/
-          weight: 3
+          weight: 4
         - name: Resume
           url: RuizAngulo_CV_2024.pdf
-          weight: 4
+          weight: 5
         # - name: Photography
         #   url: https://pmichaillat.substack.com
         #   weight: 4
